tests/snapshots/examples_fixtures/type_system__failing__163_match_concrete_disagreement_prefers_e300.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/163_match_concrete_disagreement_prefers_e300.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The arms of this `match` expression produce different types.

  --> examples/type_system/failing/163_match_concrete_disagreement_prefers_e300.flx:4:18
  |
3 |         true -> 1,

  |                 - first arm returns `Int`
4 |         false -> "oops",
  |                  ^^^^^^
  |                  ------ arm 2 returns `String`

Help:
  All match arms must return the same type. Change arm 2 to return `Int`.
== stdout ==
<not executed>
